--- a/complementares-For/01_listaFilmes.html
+++ b/complementares-For/01_listaFilmes.html
@@ -9,11 +9,25 @@
     */
 
     //ENTRADA
-
+        const quantosFilmes = parseInt(prompt("Digite quantos filmes deseja adicionar"));
+        let comedia = [];
+        let drama = [];
+        let romance = [];
 
     //PROCESSAMENTO
+        for (let i=0; i<quantosFilmes; i++){
+            let nome = prompt("Qual o nome do filme?");
+            let genero = prompt("Qual o gênero do filme?(D/Drama;C/Comédia;R/Romance).").toUpperCase();
+            if (genero === "D"){
+                drama.push(nome)
+            } else if (genero === "C"){
+                comedia.push(nome)
+            } else if (genero === "R"){
+                romance.push(nome)
+            } 
+        }
 
-    
     //SAÍDA
+        document.write(`Drama: ${drama.join(", ")} <br> Comédia: ${comedia.join(", ")} <br> Romance: ${romance.join(", ")}`)
     
 </script>
